--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
 	<script src="https://code.angularjs.org/1.5.5/angular-route.min.js"></script>
 	<script src="https://code.angularjs.org/1.5.5/angular-resource.min.js"></script>
+	<script src="app.js"></script>
 
   </head>
 
