--- a/index.html
+++ b/index.html
@@ -72,8 +72,10 @@
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-12">
+			
           <h2>Heading</h2>
+			<div ng-view></div>
         </div>
       </div>
 
